# nlp1-labs

./: .gitignore  README.md  practical1.ipynb  pyproject.toml
practical1/: .gitignore  discussion.md  lexicon.py  naive_bayes.py  notebook.ipynb  practical1.ipynb  svm.py  utils.py
practical2/: .gitignore  BOW.py  LSTM.py  NLP_lab2_main.ipynb  data_utils.py  log.csv  metrics.py  models.py  notes.md  practical2.ipynb  structs.py  utils.py  word_order.ipynb
practical2/utils/: embeddings.py  evaluation.py  helpers.py  loading.py  mini_batching.py  training.py  training_old.py  vocab.py
